2010-04-28  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Simon Fraser.

        Media queries empty values
        https://bugs.webkit.org/show_bug.cgi?id=38116

        Adding isValid() method to MediaQueryExp to make it possible to differentiate
        between queries with empty values and queries with invalid values.

        * fast/media/media-query-invalid-value-expected.txt: Added.
        * fast/media/media-query-invalid-value.html: Added.

2010-03-26  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Simon Hausmann.

        Allow plugins implemented by the application, such as mimetype 'x-qt-plugin',
         when pluginsEnabled is false.

        For all platforms apart from Qt, isApplicationPluginMIMEType() returns false.

        https://bugs.webkit.org/show_bug.cgi?id=32196

        * platform/qt/plugins/application-plugin-plugins-disabled-expected.txt: Added.
        * plugins/application-plugin-plugins-disabled-expected.txt: Added.
        * plugins/application-plugin-plugins-disabled.html: Added.

2010-04-29  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Simon Hausmann.

        [Qt] Loading of large page can take up to 10 seconds
        https://bugs.webkit.org/show_bug.cgi?id=31719

        Followup patch. Update expected files because of minor differences.
        (size of whitespaces, place of linebreaks)

        * platform/qt/css1/basic/inheritance-expected.txt:
        * platform/qt/css1/box_properties/float_elements_in_series-expected.txt:
        * platform/qt/css1/box_properties/float_margin-expected.txt:
        * platform/qt/css1/color_and_background/background_attachment-expected.txt:
        * platform/qt/css1/color_and_background/background_repeat-expected.txt:
        * platform/qt/css1/conformance/forward_compatible_parsing-expected.txt:
        * platform/qt/css1/font_properties/font-expected.txt:
        * platform/qt/css1/font_properties/font_style-expected.txt: